# Codepipeline502

./: DIRECT_PUSH_TEST.md  Dockerfile  README.md  Readme.md  __init__.py  __main__.py  ab_test_runner.py  agent_reviewer.py  app_secrets.py  artifacts_caching.py  asgi_latency.py  branch_protection.py  canary_watcher.py  circuit.py  cli.py  codepipeline_tree_sitter.py  config.py  context_assembler.py  data_residency_privacy.py  datastore.py  dependency_security.py  deploy_prod.sh  deployer.py  docker-compose.yml  embeddings_db.py  fine_tuner.py  fix_imports.py  github_client.py  gui.py  gui_bridge.py  integration_test_generator.py  llm_gateway.py  llm_generator.py  llm_trainer.py  logging_config.py  meta_planner.py  metrics.py  observability.py  observability_slos.py  orchestrator.py  (+45 more)
.ai-build/: BUILD_20250803004126.txt  BUILD_20250803004341.txt  BUILD_20250803004605.txt  BUILD_20250803004743.txt  BUILD_20250806184307.txt  BUILD_20250806192126.txt  BUILD_20250807172908.txt
.cursor/: rules
.github/ISSUE_TEMPLATE/: ai_build.yml
.github/workflows/: .ci.yml.swp  ai-orchestrator.yml  ai-orchestrator.yml.bak-20250803-010808  ai-orchestrator.yml.bak-20250803-023755  budget-check.yml  ci.yml  debug-structure.yml  deploy.yml  deploy.yml.bak-20250805-151909  feature-bot.yml  full-ci.yml  lint.yml  nightly-latency.yml  qa-suite.yml  release.yml  release.yml.bak-20250805-133125  security-auto-merge.yml
analysis/: semgrep.py
api/: __init__.py  __main__.py  app.py
app/: __init__.py  main.py
app_secrets_pkg/: __init__.py  vault.py
codepipeline/: __init__.py
codepipeline/api/: __init__.py  app.py
core/: __init__.py  observability.py  schemas.py  training_db.py
db/: schema.py
docs/: RUNBOOK.md
metrics/: __init__.py  grafana.py  grafana_writer.py
migrations/: init_migration.py
policies/: POLICY.md  QUALITY.yml
qa/: scorecard.py
release/: __init__.py  bump.py
secrets/: __init__.py
services/stats-api-20250803024113-20250803004126/: PLAN.md  pyproject.toml
tests/: test_alembic_version.py  test_api.py  test_app_routes.py  test_auth_async.py  test_auth_router.py  test_basic.py  test_basic_imports.py  test_bump_version.py  test_canary.py  test_circuit.py  test_cli.py  test_context_window_manager_token.py  test_contract___main__.py  test_contract_ab_test_runner.py  test_contract_agent_reviewer.py  test_contract_artifacts_caching.py  test_contract_cli.py  test_contract_config.py  test_contract_context_assembler.py  test_contract_data_residency_privacy.py  test_contract_datastore.py  test_contract_dependency_security.py  test_contract_deployer.py  test_contract_embeddings_db.py  test_contract_fine_tuner.py  test_contract_github_client.py  test_contract_gui.py  test_contract_gui_bridge.py  test_contract_integration_test_generator.py  test_contract_llm_gateway.py  test_contract_llm_generator.py  test_contract_llm_trainer.py  test_contract_logging_config.py  test_contract_meta_planner.py  test_contract_metrics.py  test_contract_observability.py  test_contract_observability_slos.py  test_contract_orchestrator.py  test_contract_orchestrator_operator.py  test_contract_parallel_generator.py  (+57 more)
tools/: ai_build.py
utils/: __init__.py  retry.py
(+12 files in other folders)
